Time: 1 ms (54.68%) | Memory: 42.2 MB (96.62%) - LeetSync